--- a/wachita/angular.json
+++ b/wachita/angular.json
@@ -22,7 +22,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/vaca.ico"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
